# vpnapp

./: .env.example  .gitattributes  .gitignore  README.md  build-apk.sh  docker-compose.yml  install.sh  securevpn.sh
.github/workflows/: build-apk.yml
backend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
backend/src/: app.module.ts  health.controller.ts  main.ts
backend/src/admin/: admin.controller.ts  admin.guard.ts  admin.module.ts  admin.service.ts  audit-log.interceptor.ts  audit.service.ts
backend/src/admin-auth/: admin-auth.controller.ts  admin-auth.module.ts  admin-auth.service.ts
backend/src/db/: pool.ts
db/: migrate.sh  schema.sql
db/migrations/: 0001_remnawave_node_id.sql  0002_system_settings.sql  0002_time_based_rewards.sql  0003_device_attestation.sql  0004_session_inbound.sql  0005_auth_lockout.sql  0006_admin_roles.sql  0007_admin_audit_log.sql  0008_admin_sessions.sql  0009_node_drain.sql  0010_force_migrate.sql  0011_panel_node_id_text.sql
docs/: PHASE1_ARCHITECTURE.md  deployment.md  phase1-ads-reward-model.md  phase1-architecture-notes.md  phase1-panel-contract.md  phase2-flutter-architecture.md  phase4-hardening-build.md
flutter_app/: pubspec.yaml
flutter_app/android/app/src/main/cpp/: CMakeLists.txt  tamper.c
flutter_app/lib/: main.dart
scripts/: create-admin.sh
web/: .dockerignore  .env.local.example  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
web/app/: layout.tsx
web/components/: Nav.tsx  NodeHealth.tsx
web/lib/: api.ts  types.ts
(+73 files in other folders)
